Update sample and reagent volumes in protocol

--- a/western-blot.html
+++ b/western-blot.html
@@ -507,9 +507,9 @@
                             <ol class="list-decimal list-inside space-y-2 text-sm text-gray-700">
                                 <li>Dilute samples 1:100 in PBS (4 μL sample + 396 μL PBS)</li>
                                 <li>Prepare BSA standards according to kit instructions</li>
-                                <li>Add 25 μL standards/samples to wells in duplicate</li>
+                                <li>Add 100 μL standards/samples to wells in triplicate</li>
                                 <li>Prepare BCA working reagent (Reagent A + B at 50:1)</li>
-                                <li>Add 200 μL working reagent to each well</li>
+                                <li>Add 100 μL working reagent to each well</li>
                                 <li>Incubate at 37°C for 30 minutes</li>
                                 <li>Read absorbance at 562 nm</li>
                                 <li>Calculate concentrations from standard curve</li>
