Add navigation back button to all protocol pages
- Add '← All Protocols' button to header of 11 protocol pages
- Position button in top-right corner with flex layout
- Match button color scheme to each protocol's theme
- Include hover effects for better UX
- Maintain responsive design across all screen sizes

Updated protocols:
- Western Blot (purple theme)
- RNA Isolation and cDNA Synthesis (blue theme)
- CellTiter-Fluor Assay (indigo theme)
- Mouse Genotyping (blue-700 theme)
- Cell Culture (green theme)
- BODIPY Staining (orange theme)
- Hepatocyte Isolation (teal theme)
- Soft Agar Assay (indigo theme)
- Lentivirus Production (violet theme)
- Astrocyte Isolation (cyan theme)
- Neural Progenitor Culture (fuchsia theme)

All 14 protocols now have consistent navigation

--- a/astrocyte-isolation.html
+++ b/astrocyte-isolation.html
@@ -19,8 +19,15 @@
         <!-- Header -->
         <header class="bg-cyan-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Primary Mouse Astrocyte Isolation</h1>
-                <p class="text-cyan-100 mt-2">Trypsin-based isolation of astrocytes from neonatal or adult mouse brain</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Primary Mouse Astrocyte Isolation</h1>
+                        <p class="text-cyan-100 mt-2">Trypsin-based isolation of astrocytes from neonatal or adult mouse brain</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-cyan-600 px-6 py-3 rounded-lg font-semibold hover:bg-cyan-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
