--- a/bodipy-staining.html
+++ b/bodipy-staining.html
@@ -20,8 +20,15 @@
         <!-- Header -->
         <header class="bg-orange-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">BODIPY(493/503) Staining for Lipid Droplets</h1>
-                <p class="text-orange-100 mt-2">Fluorescent staining protocol for visualizing cellular lipid droplets</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">BODIPY(493/503) Staining for Lipid Droplets</h1>
+                        <p class="text-orange-100 mt-2">Fluorescent staining protocol for visualizing cellular lipid droplets</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-orange-600 px-6 py-3 rounded-lg font-semibold hover:bg-orange-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
