--- a/hepatocyte-isolation.html
+++ b/hepatocyte-isolation.html
@@ -19,8 +19,15 @@
         <!-- Header -->
         <header class="bg-teal-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Primary Mouse Hepatocyte Isolation</h1>
-                <p class="text-teal-100 mt-2">Two-step collagenase perfusion method via vena cava cannulation</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Primary Mouse Hepatocyte Isolation</h1>
+                        <p class="text-teal-100 mt-2">Two-step collagenase perfusion method via vena cava cannulation</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-teal-600 px-6 py-3 rounded-lg font-semibold hover:bg-teal-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
