--- a/lentivirus-production.html
+++ b/lentivirus-production.html
@@ -21,8 +21,15 @@
         <!-- Header -->
         <header class="bg-violet-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Lentiviral Production and Infection Protocol</h1>
-                <p class="text-violet-100 mt-2">Complete workflow from transfection to viral transduction</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Lentiviral Production and Infection Protocol</h1>
+                        <p class="text-violet-100 mt-2">Complete workflow from transfection to viral transduction</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-violet-600 px-6 py-3 rounded-lg font-semibold hover:bg-violet-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
