--- a/mouse-genotyping.html
+++ b/mouse-genotyping.html
@@ -38,9 +38,16 @@
         <!-- Header -->
         <header class="bg-blue-700 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Mouse Genotyping Protocol</h1>
-                <p class="text-blue-100 mt-2">Dasgupta Laboratory - Emory University</p>
-                <p class="text-blue-100 text-sm">SCD1, SCD2, Cdh5-Cre, and tdTomato Reporter Lines</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Mouse Genotyping Protocol</h1>
+                        <p class="text-blue-100 mt-2">Dasgupta Laboratory - Emory University</p>
+                        <p class="text-blue-100 text-sm">SCD1, SCD2, Cdh5-Cre, and tdTomato Reporter Lines</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-blue-700 px-6 py-3 rounded-lg font-semibold hover:bg-blue-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
