--- a/neural-progenitor-culture.html
+++ b/neural-progenitor-culture.html
@@ -19,8 +19,15 @@
         <!-- Header -->
         <header class="bg-fuchsia-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Mouse Neural Progenitor Culture (Neurosphere Assay)</h1>
-                <p class="text-fuchsia-100 mt-2">In vitro culture of neural stem/progenitor cells from embryonic mouse brain</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Mouse Neural Progenitor Culture (Neurosphere Assay)</h1>
+                        <p class="text-fuchsia-100 mt-2">In vitro culture of neural stem/progenitor cells from embryonic mouse brain</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-fuchsia-600 px-6 py-3 rounded-lg font-semibold hover:bg-fuchsia-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
