--- a/cell-culture.html
+++ b/cell-culture.html
@@ -38,8 +38,15 @@
         <!-- Header -->
         <header class="bg-green-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Mammalian Cell Culture Maintenance Protocol</h1>
-                <p class="text-green-100 mt-2">Complete Guide to Cell Culture, Passaging, and Cryopreservation</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Mammalian Cell Culture Maintenance Protocol</h1>
+                        <p class="text-green-100 mt-2">Complete Guide to Cell Culture, Passaging, and Cryopreservation</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-green-600 px-6 py-3 rounded-lg font-semibold hover:bg-green-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
