--- a/western-blot.html
+++ b/western-blot.html
@@ -38,8 +38,15 @@
         <!-- Header -->
         <header class="bg-purple-600 text-white shadow-lg">
             <div class="container mx-auto px-4 py-6">
-                <h1 class="text-3xl font-bold">Western Blot Protocol</h1>
-                <p class="text-purple-100 mt-2">Complete Protocol from Cell Lysis to Band Visualization</p>
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h1 class="text-3xl font-bold">Western Blot Protocol</h1>
+                        <p class="text-purple-100 mt-2">Complete Protocol from Cell Lysis to Band Visualization</p>
+                    </div>
+                    <a href="index.html" class="bg-white text-purple-600 px-6 py-3 rounded-lg font-semibold hover:bg-purple-50 transition">
+                        ← All Protocols
+                    </a>
+                </div>
             </div>
         </header>
 
