Add alternative strong RIPA buffer recipe to Western Blot protocol
- Add "Strong RIPA Buffer" formulation as alternative option
- For difficult-to-lyse samples, tissues, and nuclear proteins
- Complete recipe with 8 components:
  * 50 mM Tris-HCl pH 7.4 (vs 25 mM in standard)
  * 150 mM NaCl
  * 1% Sodium Deoxycholate
  * 0.1% SDS
  * 1% Triton X-100 (vs NP-40 in standard)
  * 0.5 mM EDTA (chelating agent, not in standard)
  * 1 mM Na₃VO₄ (phosphatase inhibitor, built-in)
  * 50 mM NaF (phosphatase inhibitor, built-in)

- Include detailed comparison of key differences:
  * Higher Tris concentration for better buffering
  * Stronger detergent (Triton X-100)
  * Built-in EDTA for metalloprotease protection
  * Built-in phosphatase inhibitors

- Add usage notes for inhibitor adjustment
- Reference protocols.io source

Provides researchers with optimized buffer choice based on sample type

--- a/western-blot.html
+++ b/western-blot.html
@@ -397,6 +397,81 @@
                                 <li>Store at 4°C for up to 6 months</li>
                                 <li><strong>Do NOT add inhibitors until day of use</strong></li>
                             </ol>
+
+                            <div class="bg-purple-50 border-l-4 border-purple-500 p-4 mt-4">
+                                <p class="font-semibold text-purple-900 mb-3">Alternative: Strong RIPA Buffer (for difficult-to-lyse samples)</p>
+                                <p class="text-sm text-purple-800 mb-3">Use this stronger formulation when working with tough cells, tissues, or nuclear proteins. Contains additional chelating agents and built-in phosphatase inhibitors.</p>
+
+                                <table class="w-full text-sm bg-white rounded">
+                                    <thead class="bg-purple-100">
+                                        <tr>
+                                            <th class="px-3 py-2 text-left">Component</th>
+                                            <th class="px-3 py-2 text-left">Final Concentration</th>
+                                            <th class="px-3 py-2 text-left">Amount for 100 mL</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody class="divide-y divide-purple-200">
+                                        <tr>
+                                            <td class="px-3 py-2">Tris-HCl pH 7.4</td>
+                                            <td class="px-3 py-2">50 mM</td>
+                                            <td class="px-3 py-2">5 mL of 1 M stock</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">NaCl</td>
+                                            <td class="px-3 py-2">150 mM</td>
+                                            <td class="px-3 py-2">3 mL of 5 M stock</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">Sodium Deoxycholate</td>
+                                            <td class="px-3 py-2">1% (w/v)</td>
+                                            <td class="px-3 py-2">1 g</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">SDS</td>
+                                            <td class="px-3 py-2">0.1% (w/v)</td>
+                                            <td class="px-3 py-2">0.1 g</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">Triton X-100</td>
+                                            <td class="px-3 py-2">1% (v/v)</td>
+                                            <td class="px-3 py-2">1 mL</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">EDTA</td>
+                                            <td class="px-3 py-2">0.5 mM</td>
+                                            <td class="px-3 py-2">50 μL of 1 M stock</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">Na₃VO₄ (Sodium orthovanadate)</td>
+                                            <td class="px-3 py-2">1 mM</td>
+                                            <td class="px-3 py-2">100 μL of 1 M stock</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">NaF (Sodium fluoride)</td>
+                                            <td class="px-3 py-2">50 mM</td>
+                                            <td class="px-3 py-2">5 mL of 1 M stock</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="px-3 py-2">ddH₂O</td>
+                                            <td class="px-3 py-2">-</td>
+                                            <td class="px-3 py-2">to 100 mL</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                                <div class="mt-3 text-sm text-purple-800">
+                                    <p class="font-semibold mb-1">Key differences from standard RIPA:</p>
+                                    <ul class="list-disc list-inside space-y-1 ml-2">
+                                        <li>Higher Tris concentration (50 mM vs 25 mM) for better buffering</li>
+                                        <li>Triton X-100 instead of NP-40 (stronger detergent)</li>
+                                        <li>EDTA added (chelates divalent cations, protects from metalloproteases)</li>
+                                        <li>Na₃VO₄ and NaF included (phosphatase inhibitors built-in)</li>
+                                        <li>Best for: tough cells, tissue samples, nuclear proteins, phosphoproteins</li>
+                                    </ul>
+                                    <p class="mt-2"><strong>Note:</strong> With built-in Na₃VO₄ and NaF, you may reduce added phosphatase inhibitor on day of use, but still add protease inhibitors as usual.</p>
+                                    <p class="mt-1 text-xs italic">Reference: protocols.io/view/RIPA-lysis-buffer-strong-dky4xv</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
