Update strong RIPA buffer reference to use DOI link
- Change reference format to clickable DOI link
- Use proper citation: doi:10.17504/protocols.io.dky4xv
- Link opens in new tab for easy access
- Styled with purple theme to match section

--- a/western-blot.html
+++ b/western-blot.html
@@ -469,7 +469,7 @@
                                         <li>Best for: tough cells, tissue samples, nuclear proteins, phosphoproteins</li>
                                     </ul>
                                     <p class="mt-2"><strong>Note:</strong> With built-in Na₃VO₄ and NaF, you may reduce added phosphatase inhibitor on day of use, but still add protease inhibitors as usual.</p>
-                                    <p class="mt-1 text-xs italic">Reference: protocols.io/view/RIPA-lysis-buffer-strong-dky4xv</p>
+                                    <p class="mt-1 text-xs italic">Reference: <a href="https://dx.doi.org/10.17504/protocols.io.dky4xv" target="_blank" class="text-purple-900 underline hover:text-purple-700">doi:10.17504/protocols.io.dky4xv</a></p>
                                 </div>
                             </div>
                         </div>
