Add sodium orthovanadate to base RIPA buffer recipe
- Add Na₃VO₄ (Sodium orthovanadate) at 1 mM concentration
- Use 100 μL of 1 M stock for 100 mL buffer
- Add preparation step for Na₃VO₄ (phosphatase inhibitor)
- Update note to specify 'protease inhibitors' since phosphatase
  inhibitor (Na₃VO₄) is now built into base buffer
- Improves phosphoprotein preservation in base formulation

Base RIPA now includes built-in phosphatase protection

--- a/western-blot.html
+++ b/western-blot.html
@@ -378,6 +378,11 @@
                                             <td class="px-3 py-2">1 mL</td>
                                         </tr>
                                         <tr>
+                                            <td class="px-3 py-2">Na₃VO₄ (Sodium orthovanadate)</td>
+                                            <td class="px-3 py-2">1 mM</td>
+                                            <td class="px-3 py-2">100 μL of 1 M stock</td>
+                                        </tr>
+                                        <tr>
                                             <td class="px-3 py-2">ddH₂O</td>
                                             <td class="px-3 py-2">-</td>
                                             <td class="px-3 py-2">to 100 mL</td>
@@ -392,10 +397,11 @@
                                 <li>Add sodium deoxycholate powder, stir until dissolved</li>
                                 <li>Add SDS powder, stir until dissolved (will foam - this is normal)</li>
                                 <li>Add NP-40, mix well</li>
+                                <li>Add Na₃VO₄ (phosphatase inhibitor), mix well</li>
                                 <li>Adjust pH to 7.6 if needed</li>
                                 <li>Bring to 100 mL final volume with ddH₂O</li>
                                 <li>Store at 4°C for up to 6 months</li>
-                                <li><strong>Do NOT add inhibitors until day of use</strong></li>
+                                <li><strong>Do NOT add protease inhibitors until day of use</strong></li>
                             </ol>
 
                             <div class="bg-purple-50 border-l-4 border-purple-500 p-4 mt-4">
