Change hepatocyte isolation icon to mouse-to-petri dish
- Update icon from anatomical heart (🫀) to mouse→petri dish (🐭→🧫)
- Better visually represents the isolation process
- Shows progression from mouse source to isolated hepatocytes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 category: 'cell',
                 duration: '~2-3 hours',
                 link: 'hepatocyte-isolation.html',
-                icon: '🫀',
+                icon: '🐭→🧫',
                 tags: ['Hepatocytes', 'Liver', 'Perfusion', 'Liberase', 'Primary cells', 'Percoll', 'Mouse', 'Cell isolation', 'IACUC']
             },
             {
